fix code messing up the display on mobile

--- a/themes/gtf.io/assets/styles/single.scss
+++ b/themes/gtf.io/assets/styles/single.scss
@@ -75,3 +75,7 @@ figure {
         }
     }
 }
+
+pre {
+  white-space: pre-wrap;
+}
